test/cases/compile_errors/stage1/obj/empty_if_body.zig
export fn a() void {
    if(true);
}

// error
// backend=stage1
// target=native
//
// tmp.zig:2:13: error: expected block or assignment, found ';'
